--- a/coyote-sftp-jar/testServer/webapps/ROOT/WEB-INF/web.xml
+++ b/coyote-sftp-jar/testServer/webapps/ROOT/WEB-INF/web.xml
@@ -26,4 +26,25 @@
      Welcome to Tomcat
   </description>
 
+  <!-- Enable WebDAV for SFTP testing -->
+  <servlet>
+    <servlet-name>webdav</servlet-name>
+    <servlet-class>org.apache.catalina.servlets.WebdavServlet</servlet-class>
+    <init-param>
+      <param-name>debug</param-name>
+      <param-value>0</param-value>
+    </init-param>
+    <init-param>
+      <param-name>listings</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+      <param-name>readonly</param-name>
+      <param-value>false</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>webdav</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
 </web-app>
