--- a/coyote-sftp-jar/build.gradle
+++ b/coyote-sftp-jar/build.gradle
@@ -23,6 +23,10 @@ dependencies {
         // TODO
         exclude module: 'ecj'
     }
+    runtime(
+        [group: 'org.apache.tomcat', name: 'jasper-jdt', version: '6.0.+'],
+        [group: 'javax.transaction', name: 'jta', version: '1.1']
+    )
     testCompile(
         [group: 'junit', name: 'junit', version: '4.+']
     )
@@ -34,6 +38,7 @@ task runTestServer(type: JavaExec, depends: classes) {
     workingDir = project.projectDir.absolutePath + '/testServer'
     classpath configurations.runtime
     classpath sourceSets.main.output.classesDir
+    classpath sourceSets.main.output.resourcesDir
 }
 
 task wrapper(type: Wrapper)
