--- a/.hgignore
+++ b/.hgignore
@@ -10,6 +10,9 @@ Syntax: regexp
 
 # Misc
 ^coyote-sftp-jar/testServer/key\.ser$
+^coyote-sftp-jar/testServer/webapps
+^coyote-sftp-jar/testServer/work/Catalina/localhost
+^coyote-sftp-jar/testServer/conf/Catalina/localhost
 
 # MacOS
 \.DS_Store$
