Excluded some bloat.

--- a/sample-apps/hdfs-over-webdav-war/build.gradle
+++ b/sample-apps/hdfs-over-webdav-war/build.gradle
@@ -20,8 +20,13 @@ dependencies {
         'com.google.guava:guava:12.0',
         'net.sf.webdav-servlet:webdav-servlet:2.0',
         'org.codehaus.jackson:jackson-core-asl:1.5.2',
-        'org.apache.hadoop:hadoop-core:0.20.203.0',
     )
+    compile(
+        'org.apache.hadoop:hadoop-core:0.20.203.0'
+    ) {
+        exclude group: 'org.mortbay.jetty'
+        exclude group: 'tomcat'
+    }
 }
 
 task wrapper(type: Wrapper)
