--- a/sample-apps/hdfs-over-webdav-war/build.gradle
+++ b/sample-apps/hdfs-over-webdav-war/build.gradle
@@ -20,6 +20,7 @@ dependencies {
         'com.google.guava:guava:12.0',
         'net.sf.webdav-servlet:webdav-servlet:2.0',
         'org.codehaus.jackson:jackson-core-asl:1.5.2',
+        'org.slf4j:slf4j-api:1.6+'
     )
     compile(
         'org.apache.hadoop:hadoop-core:0.20.203.0'
