--- a/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
+++ b/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
@@ -56,25 +56,6 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>All Access</web-resource-name>
-      <url-pattern>/*</url-pattern>
-      <http-method>DELETE</http-method>
-      <http-method>PUT</http-method>
-      <http-method>HEAD</http-method>
-      <http-method>OPTIONS</http-method>
-      <http-method>TRACE</http-method>
-      <http-method>GET</http-method>
-      <http-method>POST</http-method>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>tomcat</role-name>
-    </auth-constraint>
-    <user-data-constraint>
-      <transport-guarantee>NONE</transport-guarantee>
-    </user-data-constraint>
-  </security-constraint>
   <login-config>
     <auth-method>BASIC</auth-method>
     <realm-name>default</realm-name>
@@ -83,5 +64,6 @@
   <resource-ref>
     <res-ref-name>hdfsRootUri</res-ref-name>
     <res-type>java.lang.String</res-type>
+    <res-auth>Container</res-auth>
   </resource-ref>
 </web-app>
