Added resource "res-sharing-scope".

--- a/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
+++ b/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
@@ -77,5 +77,6 @@
     <res-ref-name>hdfsRootUri</res-ref-name>
     <res-type>java.lang.String</res-type>
     <res-auth>Container</res-auth>
+    <res-sharing-scope>Shareable</res-sharing-scope>
   </resource-ref>
 </web-app>
