Moved FilteredHdfsStore into HdfsStore$Filtered.

--- a/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
+++ b/sample-apps/hdfs-over-webdav-war/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     
     <init-param>
       <param-name>ResourceHandlerImplementation</param-name>
-      <param-value>my.edu.clhs.hadoop.webdav.FilteredHdfsStore</param-value>
+      <param-value>my.edu.clhs.hadoop.webdav.HdfsStore$Filtered</param-value>
     </init-param>
     <init-param>
       <param-name>rootpath</param-name>
