--- a/coyote-sftp-jar/build.gradle
+++ b/coyote-sftp-jar/build.gradle
@@ -12,23 +12,26 @@ repositories {
 }
 
 dependencies {
+    ext.SLF4J_VERSION = '1.6.+'
+    ext.TOMCAT_VERSION = '6.0.+'
+    
     compile(
-        [group: 'org.apache.sshd', name: 'sshd-core', version: '0.6.0'],
-        [group: 'org.apache.tomcat', name: 'coyote', version: '6.0.+'],
-        [group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.+']
+        "org.apache.sshd:sshd-core:0.6.0",
+        "org.apache.tomcat:coyote:${TOMCAT_VERSION}",
+        "org.slf4j:slf4j-api:${SLF4J_VERSION}",
     )
     runtime(
-        [group: 'org.apache.tomcat', name: 'jasper', version: '6.0.+']
+        "org.apache.tomcat:jasper:${TOMCAT_VERSION}",
     ) {
-        // TODO
         exclude module: 'ecj'
     }
     runtime(
-        [group: 'org.apache.tomcat', name: 'jasper-jdt', version: '6.0.+'],
-        [group: 'javax.transaction', name: 'jta', version: '1.1']
+        "org.apache.tomcat:jasper-jdt:${TOMCAT_VERSION}",
+        "org.slf4j:slf4j-jdk14:${SLF4J_VERSION}",
+        "javax.transaction:jta:1.1",
     )
     testCompile(
-        [group: 'junit', name: 'junit', version: '4.+']
+        "junit:junit:4.+",
     )
 }
 
