--- a/coyote-sftp-jar/build.gradle
+++ b/coyote-sftp-jar/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     ext.TOMCAT_VERSION = '7.0.+'
     
     compile(
-        "org.apache.sshd:sshd-core:0.6.0",
+        "org.apache.sshd:sshd-core:0.7.+",
         "org.apache.tomcat:tomcat-coyote:${TOMCAT_VERSION}",
         "org.slf4j:slf4j-api:${SLF4J_VERSION}",
     )
