--- a/coyote-sftp-jar/build.gradle
+++ b/coyote-sftp-jar/build.gradle
@@ -15,7 +15,8 @@ repositories {
 }
 
 configurations {
-    dist
+    // Compile-time dependency not included in the distribution
+    providedCompile
 }
 
 dependencies {
@@ -24,28 +25,36 @@ dependencies {
     
     compile(
         "org.apache.sshd:sshd-core:0.7.+",
-        "org.apache.tomcat:tomcat-catalina:${TOMCAT_VERSION}",
-        "org.apache.tomcat:tomcat-coyote:${TOMCAT_VERSION}",
         "org.slf4j:slf4j-api:${SLF4J_VERSION}",
     )
+    providedCompile(
+        "org.apache.tomcat:tomcat-catalina:${TOMCAT_VERSION}",
+        "org.apache.tomcat:tomcat-coyote:${TOMCAT_VERSION}",
+    )
     runtime(
-        "org.apache.tomcat:tomcat-jasper:${TOMCAT_VERSION}",
-        "org.slf4j:slf4j-simple:${SLF4J_VERSION}",
+        "org.slf4j:slf4j-jdk14:${SLF4J_VERSION}",
     )
     testCompile(
         "junit:junit:4.+",
     )
-    dist(
-        "org.apache.sshd:sshd-core:0.7.+",
-        "org.slf4j:slf4j-jdk14:${SLF4J_VERSION}",
+    testRuntime(
+        "org.apache.tomcat:tomcat-jasper:${TOMCAT_VERSION}",
     )
+}
+sourceSets.main.compileClasspath += configurations.providedCompile
+
+eclipse {
+    classpath {
+        plusConfigurations += configurations.providedCompile
+    }
 }
 
 task runTestServer(type: JavaExec, dependsOn: classes) {
     main = 'org.apache.catalina.startup.Bootstrap'
     args 'start'
     workingDir = project.projectDir.absolutePath + '/testServer'
-    classpath configurations.runtime
+    classpath configurations.testRuntime
+    classpath configurations.providedCompile
     classpath sourceSets.main.output.classesDir
     classpath sourceSets.main.output.resourcesDir
 }
@@ -59,9 +68,8 @@ task distZip(type: Zip, dependsOn: jar) {
     
     into('/copy-to-tomcat-lib') {
         from jar.archivePath 
-        from configurations.dist into '/copy-to-tomcat-lib'
+        from configurations.runtime into '/copy-to-tomcat-lib'
     }
-    // TODO include docs
 }
 
 task wrapper(type: Wrapper)
